Working on the lowere education percentage error

--- a/demographic analyzer/test_notebook.ipynb
+++ b/demographic analyzer/test_notebook.ipynb
@@ -184,72 +184,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "7e50b6e7-26ec-4092-a945-30006d3b8bba",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "United-States                 29170\n",
-       "Mexico                          643\n",
-       "?                               583\n",
-       "Philippines                     198\n",
-       "Germany                         137\n",
-       "Canada                          121\n",
-       "Puerto-Rico                     114\n",
-       "El-Salvador                     106\n",
-       "India                           100\n",
-       "Cuba                             95\n",
-       "England                          90\n",
-       "Jamaica                          81\n",
-       "South                            80\n",
-       "China                            75\n",
-       "Italy                            73\n",
-       "Dominican-Republic               70\n",
-       "Vietnam                          67\n",
-       "Guatemala                        64\n",
-       "Japan                            62\n",
-       "Poland                           60\n",
-       "Columbia                         59\n",
-       "Taiwan                           51\n",
-       "Haiti                            44\n",
-       "Iran                             43\n",
-       "Portugal                         37\n",
-       "Nicaragua                        34\n",
-       "Peru                             31\n",
-       "France                           29\n",
-       "Greece                           29\n",
-       "Ecuador                          28\n",
-       "Ireland                          24\n",
-       "Hong                             20\n",
-       "Cambodia                         19\n",
-       "Trinadad&Tobago                  19\n",
-       "Laos                             18\n",
-       "Thailand                         18\n",
-       "Yugoslavia                       16\n",
-       "Outlying-US(Guam-USVI-etc)       14\n",
-       "Honduras                         13\n",
-       "Hungary                          13\n",
-       "Scotland                         12\n",
-       "Holand-Netherlands                1\n",
-       "Name: native-country, dtype: int64"
+       "array(['Bachelors', 'HS-grad', '11th', 'Masters', '9th', 'Some-college',\n",
+       "       'Assoc-acdm', 'Assoc-voc', '7th-8th', 'Doctorate', 'Prof-school',\n",
+       "       '5th-6th', '10th', '1st-4th', 'Preschool', '12th'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df7 = df['native-country'].value_counts()\n",
-    "df7"
+    "df['education'].unique()"
    ]
   },
   {
@@ -707,7 +662,7 @@
     {
      "data": {
       "text/plain": [
-       "3486"
+       "4355"
       ]
      },
      "execution_count": 8,
@@ -716,7 +671,9 @@
     }
    ],
    "source": [
-    "higher_education = (df[(df.education.isin(['Bachelors','Masters',  'Doctorate'])) & (df.salary == '>50K')].shape[0])\n",
+    "higher_education = (df[(df.education.isin(['HS-grad', '11th','9th', 'Some-college',\n",
+    "       'Assoc-acdm', 'Assoc-voc', '7th-8th', 'Prof-school',\n",
+    "       '5th-6th', '10th', '1st-4th', 'Preschool', '12th'])) & (df.salary == '>50K')].shape[0])\n",
     "higher_education"
    ]
   },
@@ -738,8 +695,7 @@
     }
    ],
    "source": [
-    "ss = round((drc/bach * 100), 1)\n",
-    "ss"
+    "df4 = "
    ]
   },
   {
@@ -821,22 +777,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "13c9068e-c29b-4070-9acb-e4a80e564352",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'print_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\ADMINI~1\\AppData\\Local\\Temp/ipykernel_7496/1800634771.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[0mprint_data\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Number of each race:\\n\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrace_count\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Average age of men:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maverage_age_men\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Percentage with Bachelors degrees: {percentage_bachelors}%\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Percentage with higher education that earn >50K: {higher_education_rich}%\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'print_data' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "if print_data:\n",
