Finished demographic analyzer project

--- a/demographic analyzer/test_notebook.ipynb
+++ b/demographic analyzer/test_notebook.ipynb
@@ -184,27 +184,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "7e50b6e7-26ec-4092-a945-30006d3b8bba",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['Bachelors', 'HS-grad', '11th', 'Masters', '9th', 'Some-college',\n",
-       "       'Assoc-acdm', 'Assoc-voc', '7th-8th', 'Doctorate', 'Prof-school',\n",
-       "       '5th-6th', '10th', '1st-4th', 'Preschool', '12th'], dtype=object)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 32561 entries, 0 to 32560\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   age             32561 non-null  int64 \n",
+      " 1   workclass       32561 non-null  object\n",
+      " 2   fnlwgt          32561 non-null  int64 \n",
+      " 3   education       32561 non-null  object\n",
+      " 4   education-num   32561 non-null  int64 \n",
+      " 5   marital-status  32561 non-null  object\n",
+      " 6   occupation      32561 non-null  object\n",
+      " 7   relationship    32561 non-null  object\n",
+      " 8   race            32561 non-null  object\n",
+      " 9   sex             32561 non-null  object\n",
+      " 10  capital-gain    32561 non-null  int64 \n",
+      " 11  capital-loss    32561 non-null  int64 \n",
+      " 12  hours-per-week  32561 non-null  int64 \n",
+      " 13  native-country  32561 non-null  object\n",
+      " 14  salary          32561 non-null  object\n",
+      "dtypes: int64(6), object(9)\n",
+      "memory usage: 3.7+ MB\n"
+     ]
     }
    ],
    "source": [
-    "df['education'].unique()"
+    "df.info()"
    ]
   },
   {
